// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-raw css snapshot test - css 1`] = `
"import { css } from 'astroturf';
export const someClassName = css \`
  color: red;
\`;
//# sourceMappingURL=css.js.map"
`;

exports[`typescript-raw css snapshot test - css-local-interpolation 1`] = `
"import { css } from 'astroturf';
const RED = 'red';
export const someClassName = css \`
  color: \${RED};
\`;
//# sourceMappingURL=css-local-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - css-property-assignment 1`] = `
"import { css } from 'astroturf';
export const classes = {
    someClassName: css \`
    color: red;
  \`,
};
//# sourceMappingURL=css-property-assignment.js.map"
`;

exports[`typescript-raw css snapshot test - css-property-assignment-local-interpolation 1`] = `
"import { css } from 'astroturf';
const RED = 'red';
export const classes = {
    someClassName: css \`
    color: \${RED};
  \`,
};
//# sourceMappingURL=css-property-assignment-local-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - css-property-assignment-remote-interpolation 1`] = `
"import { RED, GREEN } from './utils/colors';
import { css } from 'astroturf';
export const classes = {
    someClassName: css \`
    color: \${"red"};
    background: \${"green"};
  \`,
};
//# sourceMappingURL=css-property-assignment-remote-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - css-remote-interpolation 1`] = `
"import { RED, GREEN } from './utils/colors';
import { css } from 'astroturf';
export const someClassName = css \`
  color: \${"red"};
  background: \${"green"};
\`;
//# sourceMappingURL=css-remote-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - styled-function-local-interpolation 1`] = `
"import styled from 'astroturf/react';
const RED = 'red';
const A = styled.div \`
  color: red;
\`;
export const SomeComponent = styled(A) \`
  background: \${RED};
\`;
//# sourceMappingURL=styled-function-local-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - styled-function-remote-interpolation 1`] = `
"import styled from 'astroturf/react';
import { RED } from './utils/colors';
const A = styled.div \`
  color: red;
\`;
export const SomeComponent = styled(A) \`
  background: \${"red"};
\`;
//# sourceMappingURL=styled-function-remote-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - styled-remote-interpolation 1`] = `
"import styled from 'astroturf/react';
import { RED, GREEN } from './utils/colors';
export const SomeComponent = styled.div \`
  color: \${"red"};
  background: \${"green"};
\`;
//# sourceMappingURL=styled-remote-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - stylesheet 1`] = `
"import { stylesheet } from 'astroturf';
export const { classA, classB } = stylesheet \`
  .classA {
    color: red;
  }

  .classB {
    color: green;
  }
\`;
//# sourceMappingURL=stylesheet.js.map"
`;

exports[`typescript-raw css snapshot test - stylesheet-local-interpolation 1`] = `
"import { stylesheet } from 'astroturf';
const RED = 'red';
export const { a } = stylesheet \`
  .a {
    color: \${RED};
  }
\`;
//# sourceMappingURL=stylesheet-local-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - stylesheet-remote-interpolation 1`] = `
"import { stylesheet } from 'astroturf';
import { GREEN, RED } from './utils/colors';
export const { a } = stylesheet \`
  .a {
    color: \${"red"};
    background: \${"green"};
  }
\`;
//# sourceMappingURL=stylesheet-remote-interpolation.js.map"
`;
